namespace OnlineClothingStore.App.Behavioral.Iterator;

public class ProductCatalog
{
    
}